trunk/Archive2/ad/efd6ed8d3af91c/output
main.cpp:11:30: error: typedef 'PFMALLOC' is initialized (use decltype instead)
 typedef void * (*PFMALLOC ) (size_t n);
                              ^
main.cpp:11:30: error: 'size_t' was not declared in this scope
main.cpp:24:5: error: 'PFMALLOC' does not name a type
     PFMALLOC mallocf;
     ^
main.cpp: In function 'long int WXV2TBAUE(ICMUSERSTRUCT*)':
main.cpp:36:126: error: 'malloc' was not declared in this scope
     pContainerDataStruct = (ICMCONTAINERDATA_STRUCT *) malloc (sizeof(ICMCONTAINERDATA_STRUCT) * pCMStruct->sNumContainerData);
                                                                                                                              ^
main.cpp:40:61: error: 'free' was not declared in this scope
     if (pContainerDataStruct != 0) free(pContainerDataStruct);
                                                             ^
main.cpp:33:10: warning: unused variable 'envStr' [-Wunused-variable]
     char envStr[256];
          ^
